yaml/k8s-3-Networking/2-cilium_demo/05-prod-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: prod
  namespace: networking
  labels:
    zone: prod
    name: prod-app
spec:
  containers:
  - name: prod
    image: metamagic/oshell
    imagePullPolicy: IfNotPresent
