yaml/k8s-3-Networking/2-cilium_demo/08-prod-pd-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: prod
  namespace: policy-demo
  labels:
    name: prod
spec:
  containers:
  - name: prod
    image: metamagic/oshell
    imagePullPolicy: IfNotPresent
