yaml/k8s-3-Networking/2-cilium_demo/pod-np.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: policy-demo
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
