yaml/k8s-3-Networking/2-cilium_demo/04-web-svc-networking.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: networking
spec:
  selector: 
    name: web
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
    name: http
