yaml/k8s-3-Networking/2-cilium_demo/12-hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: networking
  labels:
    app: hello-svc
spec:
  selector:
    app: hello
  ports:
   - port: 80
     targetPort: 80
