yaml/k8s-3-Networking/2-cilium_demo/14-hello-svc-pd.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc-pd
  namespace: policy-demo
  labels:
    app: hello-svc
spec:
  selector:
    app: hello
  type: NodePort
  ports:
   - port: 80
     targetPort: 80
