yaml/k8s-3-Networking/2-cilium_demo/prod-svc-policy-demo.yml
apiVersion: v1
kind: Service
metadata:
  name: prod
  namespace: policy-demo
spec:
  selector: 
    zone: prod
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
    name: http
