yaml/k8s-3-Networking/2-cilium_demo/web-allow-from-all-ns.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: networking
  name: web-allow-all-namespaces
spec:
  podSelector:
    matchLabels:
      name: web
  ingress:
  - from:
    - namespaceSelector: {}
